--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="">
+   <meta name="keywords" content="">
     <title>Prothoughtinsight</title>
 <meta property="og:type" content="website">
 <meta property="og:title" content="ProThoughtInsight - Stay Ahead With Thoughtful Insights">
