--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="">
+   <meta name="description" content="Learn how to optimize your Facebook page for local searches and attract more customers in your area with these simple tips!,">
    <meta name="keywords" content="">
     <title>Prothoughtinsight</title>
 <meta property="og:type" content="website">
