--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="Learn how to optimize your Facebook page for local searches and attract more customers in your area with these simple tips!,Discover the top Facebook marketing strategies for small businesses to grow your audience and increase sales in 2025,Discover the top Instagram marketing strategies for small businesses to grow your audience and increase sales in 2025,">
+   <meta name="description" content="Learn how to optimize your Facebook page for local searches and attract more customers in your area with these simple tips!,Discover the top Facebook marketing strategies for small businesses to grow your audience and increase sales in 2025,Discover the top Instagram marketing strategies for small businesses to grow your audience and increase sales in 2025,Learn how to optimize your Instagram profile for business in 2025 and turn your followers into loyal customers,">
    <meta name="keywords" content="">
     <title>Prothoughtinsight</title>
 <meta property="og:type" content="website">
