--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Learn how to optimize your Facebook page for local searches and attract more customers in your area with these simple tips!,Discover the top Facebook marketing strategies for small businesses to grow your audience and increase sales in 2025,Discover the top Instagram marketing strategies for small businesses to grow your audience and increase sales in 2025,Learn how to optimize your Instagram profile for business in 2025 and turn your followers into loyal customers,Discover the top strategies to grow your YouTube channel and turn your content into a subscriber magnet,Discover the top YouTube marketing strategies for small businesses in 2025 to boost brand visibility, generate leads, and increase sales.">
-   <meta name="keywords" content="">
+   <meta name="keywords" content="YouTube Marketing 2025, Small Business Marketing, YouTube Growth Strategies, Video Marketing, Business Promotion,">
     <title>Prothoughtinsight</title>
 <meta property="og:type" content="website">
 <meta property="og:title" content="ProThoughtInsight - Stay Ahead With Thoughtful Insights">
