--- a/About/index.html
+++ b/About/index.html
@@ -58,7 +58,7 @@
 
 
             <h2>Join My Community</h2>
-            <p>Ready to stay ahead of the curve? <a href="mailto: victorjaja500@gmail.com">Contact me</a> or follow me on my social media platforms to join my growing community.</p><br>
+            <p>Ready to Stay Ahead With Thoughtful Insights? <a href="mailto: victorjaja500@gmail.com">Contact me</a> or follow me on my social media platforms to join my growing community.</p><br>
 
  
       </div>
