--- a/Privacy-Policy/index.html
+++ b/Privacy-Policy/index.html
@@ -31,9 +31,9 @@
 
 
             <h2>1. Information I Collect</h2>
-            <p>I collect different types of information to provide and improve our services, including:</p>
+            <p>I collect different types of information to provide and improve my services, including:</p>
             <ul>
-                <li><strong>Personal Information:</strong> Name, email address, and other contact details when you subscribe or contact us.</li>
+                <li><strong>Personal Information:</strong> Name, email address, and other contact details when you subscribe or contact me.</li>
                 <li><strong>Usage Data:</strong> Information about how you interact with my site (e.g., pages visited, time spent).</li>
                 <li><strong>Cookies & Tracking:</strong> I use cookies to enhance your experience and analyze site traffic.</li>
             </ul><br>
@@ -42,7 +42,7 @@
             <h2>2. How I Use Your Information</h2>
             <p>Your information is used to:</p>
             <ul>
-                <li>Provide and maintain our blog content.</li>
+                <li>Provide and maintain my blog content.</li>
                 <li>Improve user experience and website performance.</li>
                 <li>Send newsletters, updates, or promotional content (with your consent).</li>
                 <li>Monitor website usage and analyze trends.</li>
