--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -9,8 +9,8 @@
 <meta property="og:type" content="article">
 <meta property="og:title" content="Optimizing Your Facebook Profile For Local Searches.">
 <meta property="og:description" content="Learn How To Improve Your Facebook Profile For Local Searches.">
-<meta property="og:url" content="https://prothoughtinsight.online/Facebook-Local-SEO/">
-<meta property="og:image" content="https://prothoughtinsight.online/1.jpg">
+<meta property="og:url" content="https://prothoughtinsight.name.ng/Facebook-Local-SEO/">
+<meta property="og:image" content="https://prothoughtinsight.name.ng/1.jpg">
 <meta property="og:site_name" content="ProThoughtInsight">
 <meta property="og:locale" content="en_US">
 
