--- a/Instagram-Marketing-Strategies/index.html
+++ b/Instagram-Marketing-Strategies/index.html
@@ -9,8 +9,8 @@
 <meta property="og:type" content="article">
 <meta property="og:title" content="Top Instagram Marketing Strategies for Small Businesses in 2025">
 <meta property="og:description" content="Learn the Top Instagram marketing strategies to grow your small business in 2025.">
-<meta property="og:url" content="https://prothoughtinsight.online/Instagram-Marketing-Strategies/">
-<meta property="og:image" content="https://prothoughtinsight.online/21.jpg">
+<meta property="og:url" content="https://prothoughtinsight.name.ng/Instagram-Marketing-Strategies/">
+<meta property="og:image" content="https://prothoughtinsight.name.ng/21.jpg">
 <meta property="og:site_name" content="ProThoughtInsight">
 <meta property="og:locale" content="en_US">
 
