--- a/Instagram-Profile-For-Business/index.html
+++ b/Instagram-Profile-For-Business/index.html
@@ -10,8 +10,8 @@
 <meta property="og:type" content="article">
 <meta property="og:title" content="How to Optimize Your Instagram Profile for Business in 2025">
 <meta property="og:description" content="Learn How To Optimize Your Instagram Profile For Business In 2025.">
-<meta property="og:url" content="https://prothoughtinsight.online/Instagram-Profile-For-Business/">
-<meta property="og:image" content="https://prothoughtinsight.online/10.jpg">
+<meta property="og:url" content="https://prothoughtinsight.name.ng/Instagram-Profile-For-Business/">
+<meta property="og:image" content="https://prothoughtinsight.name.ng/10.jpg">
 <meta property="og:site_name" content="ProThoughtInsight">
 <meta property="og:locale" content="en_US">
     <link rel="stylesheet" href="../CSS/styles.css">
