--- a/Strategies-To-Grow-Your-Youtube-Channel/index.html
+++ b/Strategies-To-Grow-Your-Youtube-Channel/index.html
@@ -10,8 +10,8 @@
 <meta property="og:type" content="article">
 <meta property="og:title" content="Top Strategies To Grow Your YouTube Channel">
 <meta property="og:description" content="Learn The Top Strategies To Grow Your YouTube Channel.">
-<meta property="og:url" content="https://prothoughtinsight.online/Strategies-To-Grow-Your-YouTube-Channel/">
-<meta property="og:image" content="https://prothoughtinsight.online/YoutubeGrowth.jpg">
+<meta property="og:url" content="https://prothoughtinsight.name.ng/Strategies-To-Grow-Your-YouTube-Channel/">
+<meta property="og:image" content="https://prothoughtinsight.name.ng/YoutubeGrowth.jpg">
 <meta property="og:site_name" content="ProThoughtInsight">
 <meta property="og:locale" content="en_US">
     <link rel="stylesheet" href="../CSS/styles.css">
