--- a/YouTube-Marketing-Strategies/index.html
+++ b/YouTube-Marketing-Strategies/index.html
@@ -10,8 +10,8 @@
 <meta property="og:type" content="article">
 <meta property="og:title" content="Top YouTube Marketing Strategies For Your Small Business in 2025">
 <meta property="og:description" content="Learn The Top YouTube Marketing Strategies For Your Small Business In 2025.">
-<meta property="og:url" content="https://prothoughtinsight.online/YouTube-Marketing-Strategies/">
-<meta property="og:image" content="https://prothoughtinsight.online/25.jpg">
+<meta property="og:url" content="https://prothoughtinsight.name.ng/YouTube-Marketing-Strategies/">
+<meta property="og:image" content="https://prothoughtinsight.name.ng/25.jpg">
 <meta property="og:site_name" content="ProThoughtInsight">
 <meta property="og:locale" content="en_US">
     <link rel="stylesheet" href="../CSS/styles.css">
