--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -15,6 +15,37 @@
 <meta property="og:locale" content="en_US">
 
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "Optimizing Your Facebook Page for Local Searches",
+  "author": {
+    "@type": "Person",
+    "name": "Jaja Victor Barisuka"
+  },
+  "datePublished": "2025-01-27",
+  "publisher": {
+    "@type": "Organization",
+    "name": "ProThoughtInsight",
+    "url": "https://prothoughtinsight.name.ng",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://prothoughtinsight.name.ng/logo.png"
+    }
+  },
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://prothoughtinsight.name.ng/Facebook-Local-SEO"
+  },
+  "description": "Learn how to optimize your Facebook page to appear in local searches and attract nearby customers. Perfect tips for 2025.",
+  "image": "https://prothoughtinsight.name.ng/1.jpg",
+  "keywords": "Facebook SEO, local search optimization, Facebook marketing"
+}
+</script>
+
+
+
     <link rel="stylesheet" href="../CSS/styles.css">
     <title>Optimizing Your Facebook Page for Local Searches | Jaja Victor Barisuka Blog</title>
 </head>
