--- a/Facebook-Marketing-Strategies/index.html
+++ b/Facebook-Marketing-Strategies/index.html
@@ -15,6 +15,37 @@
 <meta property="og:locale" content="en_US">
 
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "Top Facebook Marketing Strategies for Your Small Business in 2025",
+  "author": {
+    "@type": "Person",
+    "name": "Jaja Victor Barisuka"
+  },
+  "datePublished": "2025-01-27",
+  "publisher": {
+    "@type": "Organization",
+    "name": "ProThoughtInsight",
+    "url": "https://prothoughtinsight.name.ng",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://prothoughtinsight.name.ng/logo.png"
+    }
+  },
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://prothoughtinsight.name.ng/Facebook-Marketing-Strategies"
+  },
+  "description": "Discover the top Facebook marketing strategies for small businesses in 2025. Grow your audience, boost engagement, and increase sales today.",
+  "image": "https://prothoughtinsight.name.ng/4.jpg",
+  "keywords": "Facebook marketing 2025, small business Facebook, social media strategies"
+}
+</script>
+
+
+
     <title>Top Facebook Marketing Strategies for Small Businesses | Jaja Victor Barisuka Blog</title>
     <link rel="stylesheet" href="../CSS/styles.css">
 </head>
