--- a/Instagram-Marketing-Strategies/index.html
+++ b/Instagram-Marketing-Strategies/index.html
@@ -8,11 +8,43 @@
     <meta name="author" content="Jaja Victor Barisuka">
 <meta property="og:type" content="article">
 <meta property="og:title" content="Top Instagram Marketing Strategies for Small Businesses in 2025">
+
 <meta property="og:description" content="Learn the Top Instagram marketing strategies to grow your small business in 2025.">
 <meta property="og:url" content="https://prothoughtinsight.name.ng/Instagram-Marketing-Strategies/">
 <meta property="og:image" content="https://prothoughtinsight.name.ng/21.jpg">
 <meta property="og:site_name" content="ProThoughtInsight">
 <meta property="og:locale" content="en_US">
+
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "Top Instagram Marketing Strategies for Your Small Business in 2025",
+  "author": {
+    "@type": "Person",
+    "name": "Jaja Victor Barisuka"
+  },
+  "datePublished": "2025-01-27",
+  "publisher": {
+    "@type": "Organization",
+    "name": "ProThoughtInsight",
+    "url": "https://prothoughtinsight.name.ng",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://prothoughtinsight.name.ng/logo.png"
+    }
+  },
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://prothoughtinsight.name.ng/Instagram-Marketing-Strategies"
+  },
+  "description": "Explore the best Instagram marketing strategies for small businesses in 2025. Learn how to grow your presence and increase engagement.",
+  "image": "https://prothoughtinsight.name.ng/21.jpeg",
+  "keywords": "Instagram marketing 2025, small business Instagram, Instagram growth tips"
+}
+</script>
+
 
 
     <title>Top Instagram Marketing Strategies for Your Small Business | Jaja Victor Barisuka  Blog</title>
