--- a/Instagram-Profile-For-Business/index.html
+++ b/Instagram-Profile-For-Business/index.html
@@ -7,12 +7,44 @@
     <meta name="keywords" content="Instagram Business Tips, Instagram Optimization 2025, Grow Instagram Business, Instagram Marketing, Instagram SEO">
     <meta name="author" content="Jaja Victor Barisuka">
     <title>How to Optimize Your Instagram Profile for Business in 2025| Jaja Victor Barisuka Blog</title>
+
 <meta property="og:type" content="article">
 <meta property="og:title" content="How to Optimize Your Instagram Profile for Business in 2025">
 <meta property="og:description" content="Learn How To Optimize Your Instagram Profile For Business In 2025.">
 <meta property="og:url" content="https://prothoughtinsight.name.ng/Instagram-Profile-For-Business/">
 <meta property="og:image" content="https://prothoughtinsight.name.ng/10.jpg">
 <meta property="og:site_name" content="ProThoughtInsight">
+
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "How to Optimize Your Instagram Profile for Business in 2025",
+  "author": {
+    "@type": "Person",
+    "name": "Jaja Victor Barisuka"
+  },
+  "datePublished": "2025-01-27",
+  "publisher": {
+    "@type": "Organization",
+    "name": "ProThoughtInsight",
+    "url": "https://prothoughtinsight.name.ng",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://prothoughtinsight.name.ng/logo.png"
+    }
+  },
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://prothoughtinsight.name.ng/Instagram-Profile-For-Business"
+  },
+  "description": "Discover how to optimize your Instagram profile for business success in 2025. Increase your visibility, followers, and conversions with these tips.",
+  "image": "https://prothoughtinsight.name.ng/images/10.jpeg",
+  "keywords": "Instagram optimization, Instagram for business, Instagram 2025 tips"
+}
+</script>
+
 <meta property="og:locale" content="en_US">
     <link rel="stylesheet" href="../CSS/styles.css">
 </head>
