--- a/Strategies-To-Grow-Your-Youtube-Channel/index.html
+++ b/Strategies-To-Grow-Your-Youtube-Channel/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="YouTube Growth Tips, Grow YouTube Channel, YouTube SEO, YouTube Marketing, Increase YouTube Subscribers">
     <meta name="author" content="Jaja Victor Barisuka">
     <title>Top Strategies to Grow Your YouTube Channel | Jaja Victor Barisuka Blog</title>
+
 <meta property="og:type" content="article">
 <meta property="og:title" content="Top Strategies To Grow Your YouTube Channel">
 <meta property="og:description" content="Learn The Top Strategies To Grow Your YouTube Channel.">
@@ -14,6 +15,36 @@
 <meta property="og:image" content="https://prothoughtinsight.name.ng/YoutubeGrowth.jpg">
 <meta property="og:site_name" content="ProThoughtInsight">
 <meta property="og:locale" content="en_US">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "Top Strategies to Grow Your YouTube Channel",
+  "author": {
+    "@type": "Person",
+    "name": "Jaja Victor Barisuka"
+  },
+  "datePublished": "2025-01-27",
+  "publisher": {
+    "@type": "Organization",
+    "name": "ProThoughtInsight",
+    "url": "https://prothoughtinsight.name.ng",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://prothoughtinsight.name.ng/logo.png"
+    }
+  },
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://prothoughtinsight.name.ng/Strategies-To-Grow-Your-Youtube-Channel"
+  },
+  "description": "Learn actionable strategies to grow your YouTube channel in 2025. Boost your audience and create engaging content for success.",
+  "image": "https://prothoughtinsight.name.ng/YoutubeGrowth.jpg",
+  "keywords": "grow YouTube channel, YouTube growth strategies, YouTube tips 2025"
+}
+</script>
+
     <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body>
