--- a/YouTube-Marketing-Strategies/index.html
+++ b/YouTube-Marketing-Strategies/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="YouTube Marketing 2025, Small Business Marketing, YouTube Growth Strategies, Video Marketing, Business Promotion">
     <meta name="author" content="Jaja Victor Barisuka">
     <title>Top YouTube Marketing Strategies for Your Small Business in 2025 | Jaja Victor Barisuka Blog</title>
+
 <meta property="og:type" content="article">
 <meta property="og:title" content="Top YouTube Marketing Strategies For Your Small Business in 2025">
 <meta property="og:description" content="Learn The Top YouTube Marketing Strategies For Your Small Business In 2025.">
@@ -14,6 +15,37 @@
 <meta property="og:image" content="https://prothoughtinsight.name.ng/25.jpg">
 <meta property="og:site_name" content="ProThoughtInsight">
 <meta property="og:locale" content="en_US">
+
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": "Top YouTube Marketing Strategies for Your Small Business in 2025",
+  "author": {
+    "@type": "Person",
+    "name": "Jaja Victor Barisuka"
+  },
+  "datePublished": "2025-01-27",
+  "publisher": {
+    "@type": "Organization",
+    "name": "ProThoughtInsight",
+    "url": "https://prothoughtinsight.name.ng",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://prothoughtinsight.name.ng/logo.png"
+    }
+  },
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://prothoughtinsight.name.ng/YouTube-Marketing-Strategies"
+  },
+  "description": "Discover the best YouTube marketing strategies for small businesses in 2025. Learn how to increase subscribers, views, and revenue effectively.",
+  "image": "https://prothoughtinsight.name.ng/25.jpg",
+  "keywords": "YouTube marketing 2025, small business strategies, video marketing tips"
+}
+</script>
+
     <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body>
