--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <meta name="description" content="Learn how to optimize your Facebook page for local searches and attract more customers in your area with these simple tips!,Discover the top Facebook marketing strategies for small businesses to grow your audience and increase sales in 2025,Discover the top Instagram marketing strategies for small businesses to grow your audience and increase sales in 2025,Learn how to optimize your Instagram profile for business in 2025 and turn your followers into loyal customers,Discover the top strategies to grow your YouTube channel and turn your content into a subscriber magnet,Discover the top YouTube marketing strategies for small businesses in 2025 to boost brand visibility, generate leads, and increase sales.">
    <meta name="keywords" content="YouTube Marketing 2025, Small Business Marketing, YouTube Growth Strategies, Video Marketing, Business Promotion,YouTube Growth Tips, Grow YouTube Channel, YouTube SEO, YouTube Marketing, Increase YouTube Subscribers,Instagram Business Tips, Instagram Optimization 2025, Grow Instagram Business, Instagram Marketing, Instagram SEO,Instagram Marketing 2025, Small Business Marketing, Instagram Growth Strategies, Social Media Marketing, Instagram Ads,Facebook Marketing 2025, Small Business Marketing, Facebook Ads, Social Media Marketing, Facebook Growth Strategies,Facebook Page Optimization, Local SEO, Facebook SEO, Social Media Marketing, Local Business Marketing">
     <title>Prothoughtinsight</title>
+
 <meta property="og:type" content="website">
 <meta property="og:title" content="ProThoughtInsight - Stay Ahead With Thoughtful Insights">
 <meta property="og:description" content="Explore trending topics, insightful blogs, and expert content on tech, social media marketing, and more at ProThoughtInsight.">
@@ -13,6 +14,25 @@
 <meta property="og:image" content="https://prothoughtinsight.online/images/featured-image.jpg">
 <meta property="og:site_name" content="ProThoughtInsight">
 <meta property="og:locale" content="en_US">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "ProThoughtInsight",
+  "url": "https://prothoughtinsight.name.ng",
+  "description": "ProThoughtInsight is a blog covering trending topics in tech, marketing, social media, SEO, and content writing.",
+  "publisher": {
+    "@type": "Organization",
+    "name": "ProThoughtInsight",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://prothoughtinsight.name.ng/logo.png"
+    }
+  }
+}
+</script>
+
 
     <link rel="stylesheet" href="CSS/styles.css">
 
