--- a/Privacy-Policy/index.html
+++ b/Privacy-Policy/index.html
@@ -6,6 +6,31 @@
     <meta name="description" content="Read our Privacy Policy to learn how we collect, use, and protect your personal information on our blog.">
     <meta name="keywords" content="Privacy Policy, Data Protection, Personal Information, Cookies, User Data Security">
     <meta name="author" content="Jaja Victor Barisuka">
+
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "url": "https://prothoughtinsight.name.ng/privacy-policy",
+  "name": "Privacy Policy",
+  "description": "Read our privacy policy to understand how we collect, use, and protect your data.",
+  "isPartOf": {
+    "@type": "WebSite",
+    "url": "https://prothoughtinsight.name.ng"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "ProThoughtInsight",
+    "url": "https://prothoughtinsight.name.ng",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://prothoughtinsight.name.ng/logo.png"
+    }
+  }
+}
+</script>
+
     <title>Privacy Policy</title>
     <link rel="stylesheet" href="../CSS/styles.css">
 </head>
