--- a/Terms-and-conditions/index.html
+++ b/Terms-and-conditions/index.html
@@ -6,6 +6,31 @@
        <meta name="description" content="Read our Terms and Conditions to understand the rules and guidelines for using our blog site.">
     <meta name="keywords" content="Terms and Conditions, User Agreement, Website Use Policy, Legal Notice">
     <meta name="author" content="Jaja Victor Barisuka">
+
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "url": "https://prothoughtinsight.name.ng/terms-and-conditions",
+  "name": "Terms and Conditions",
+  "description": "Read our terms and conditions to understand the rules and regulations governing the use of our website.",
+  "isPartOf": {
+    "@type": "WebSite",
+    "url": "https://prothoughtinsight.name.ng"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "ProThoughtInsight",
+    "url": "https://prothoughtinsight.name.ng",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://prothoughtinsight.name.ng/logo.png"
+    }
+  }
+}
+</script>
+
     <title>Terms and Conditions</title>
     <link rel="stylesheet" href="../CSS/styles.css">
 </head>
