--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="ProThoughtInsight - Stay Ahead With Thoughtful Insights">
 <meta property="og:description" content="Explore trending topics, insightful blogs, and expert content on tech, social media marketing, and more at ProThoughtInsight.">
-<meta property="og:url" content="https://prothoughtinsight.online/">
-<meta property="og:image" content="https://prothoughtinsight.online/images/featured-image.jpg">
+<meta property="og:url" content="https://prothoughtinsight.name.ng/">
+<meta property="og:image" content="https://prothoughtinsight.name.ng/featured-image.jpg">
 <meta property="og:site_name" content="ProThoughtInsight">
 <meta property="og:locale" content="en_US">
 
