--- a/About/index.html
+++ b/About/index.html
@@ -10,8 +10,8 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="About ProThoughtInsight">
 <meta property="og:description" content="Discover the vision and mission of ProThoughtInsight, where we provide expert insights into technology, marketing, and blogging trends.">
-<meta property="og:url" content="https://prothoughtinsight.online/about">
-<meta property="og:image" content="https://prothoughtinsight.online/images/about-page-image.jpg">
+<meta property="og:url" content="https://prothoughtinsight.name.ng/about">
+<meta property="og:image" content="https://prothoughtinsight.name.ng/about-page-image.jpg">
 <meta property="og:site_name" content="ProThoughtInsight">
 <meta property="og:locale" content="en_US">
 
