--- a/Privacy-Policy/index.html
+++ b/Privacy-Policy/index.html
@@ -7,6 +7,13 @@
     <meta name="keywords" content="Privacy Policy, Data Protection, Personal Information, Cookies, User Data Security">
     <meta name="author" content="Jaja Victor Barisuka">
 
+<meta property="og:type" content="article">
+<meta property="og:title" content="Privacy Policy - ProThoughtInsight">
+<meta property="og:description" content="Read our privacy policy to understand how we collect, use, and protect your data.">
+<meta property="og:url" content="https://prothoughtinsight.name.ng/privacy-policy">
+<meta property="og:image" content="https://prothoughtinsight.name.ng/images/privacy.jpg">
+<meta property="og:site_name" content="ProThoughtInsight">
+<meta property="og:locale" content="en_US">
 
 <script type="application/ld+json">
 {
