--- a/Terms-and-conditions/index.html
+++ b/Terms-and-conditions/index.html
@@ -7,6 +7,14 @@
     <meta name="keywords" content="Terms and Conditions, User Agreement, Website Use Policy, Legal Notice">
     <meta name="author" content="Jaja Victor Barisuka">
 
+<meta property="og:type" content="article">
+<meta property="og:title" content="Terms & Conditions - ProThoughtInsight">
+<meta property="og:description" content="Read our terms and conditions to understand the rules and regulations governing the use of our website.">
+<meta property="og:url" content="https://prothoughtinsight.name.ng/Terms-and-conditions">
+<meta property="og:image" content="https://prothoughtinsight.name.ng/terms.jpg">
+<meta property="og:site_name" content="ProThoughtInsight">
+<meta property="og:locale" content="en_US">
+
 
 <script type="application/ld+json">
 {
