--- a/Privacy-Policy/index.html
+++ b/Privacy-Policy/index.html
@@ -11,7 +11,7 @@
 <meta property="og:title" content="Privacy Policy - ProThoughtInsight">
 <meta property="og:description" content="Read our privacy policy to understand how we collect, use, and protect your data.">
 <meta property="og:url" content="https://prothoughtinsight.name.ng/Privacy-Policy">
-<meta property="og:image" content="https://prothoughtinsight.name.ng/images/privacy.jpg">
+<meta property="og:image" content="https://prothoughtinsight.name.ng/privacy.jpg">
 <meta property="og:site_name" content="ProThoughtInsight">
 <meta property="og:locale" content="en_US">
 
