--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -82,7 +82,7 @@
             <p><em>For example:</em> A local cafe called “The Coffee Spot” picks “Cafe” as their business category. This way, they show up when people search for cafes nearby. Easy, right?</p>
         </section><br>
 
-<a href="" rel="nofollow"><img alt="banner" src="https://landings-cdn.adsterratech.com/referralBanners/png/80%20x%2030%20px.png" /></a><br>
+<a href="" rel="nofollow"><img alt="banner" src="https://landings-cdn.adsterratech.com/referralBanners/png/80%20x%2030%20px.png" /></a><br><a href="https://beta.publishers.adsterra.com/referral/uM4jtTUgDn" rel="nofollow">Referral link</a><br>
 
         <section>
             <h2>2. Add Your Address and Contact Info</h2>
