--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -89,6 +89,9 @@
         </section><br>
 
 
+<script async="async" data-cfasync="false" src="//pl25897937.effectiveratecpm.com/adbc3c2acb5f11dc415b07363c7a0f43/invoke.js"></script>
+<div id="container-adbc3c2acb5f11dc415b07363c7a0f43"></div><br>
+
         <section>
             <h2>3. Share Local Content</h2>
             <p>Post updates about local events, partnerships with nearby businesses, or photos of happy customers. This makes your page feel like a part of the community, and Facebook rewards active, local content.</p>
