--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -90,7 +90,7 @@
 
 
 <script async="async" data-cfasync="false" src="//pl25897937.effectiveratecpm.com/adbc3c2acb5f11dc415b07363c7a0f43/invoke.js"></script>
-<div id="container-adbc3c2acb5f11dc415b07363c7a0f43"></div><br>
+<div id="container-adbc3c2acb5f11dc415b07363c7a0f43"></div>
 
         <section>
             <h2>3. Share Local Content</h2>
