--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -89,7 +89,7 @@
         </section><br>
 
 
-<script async="async" data-cfasync="false" src="//pl25897937.effectiveratecpm.com/adbc3c2acb5f11dc415b07363c7a0f43/invoke.js"></script>
+<script async="async" data-cfasync="false" src="https://pl25897937.effectiveratecpm.com/adbc3c2acb5f11dc415b07363c7a0f43/invoke.js"></script>
 <div id="container-adbc3c2acb5f11dc415b07363c7a0f43"></div>
 
         <section>
