--- a/Facebook-Local-SEO/index.html
+++ b/Facebook-Local-SEO/index.html
@@ -120,6 +120,18 @@
         </section><br>
 
 
+<script type="text/javascript">
+	atOptions = {
+		'key' : '900b063d929b2ef03ef52798c4e2d511',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="https://www.highperformanceformat.com/900b063d929b2ef03ef52798c4e2d511/invoke.js"></script>
+
+
         <section>
             <h2>7. Stay Active on Your Page</h2>
             <p>Posting regularly and engaging with your audience keeps your page fresh and visible. It also signals to Facebook that your business is active and relevant.</p>
