--- a/About/index.html
+++ b/About/index.html
@@ -88,7 +88,7 @@
        <footer class="footer">
       <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span><br><span class="texts">"Stay Ahead With Thoughtful Insights"</span></p>
      <nav class="nav">
-         <a href="./Terms-and-conditions/">TERMS AND CONDITIONS</a>
+         <a href="../Terms-and-conditions/">TERMS AND CONDITIONS</a>
      </nav>
   </footer>
     
