--- a/Facebook-Marketing-Strategies/index.html
+++ b/Facebook-Marketing-Strategies/index.html
@@ -145,6 +145,10 @@
         </section><br>
 
 
+<script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=122247&format=300x250&ga=g"></script>
+<noscript><a href="https://yllix.com/publishers/122247" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/300x250.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
+
+
          <fieldset>
     <legend>You might also like</legend>
  <div class="card-title"><a href="../Facebook-Local-SEO/">OPTIMIZING YOUR FACEBOOK PAGE FOR LOCAL SEARCHES</a></div>
